--- a/src/main/resources/templates/layout/fragments.html
+++ b/src/main/resources/templates/layout/fragments.html
@@ -43,10 +43,7 @@
 
             <!-- Login/Logout -->
             <div class="d-flex gap-2">
-                <a href="/login" class="btn btn-sm btn-outline-light">
-                    <i class="bi bi-box-arrow-in-right"></i> 로그인
-                </a>
-                <a href="/logout" class="btn btn-sm btn-outline-light">
+                <a href="#" onclick="return false;" class="btn btn-sm btn-outline-light">
                     <i class="bi bi-box-arrow-right"></i> 로그아웃
                 </a>
             </div>
