feat: 회원가입/로그인 개선 및 클라이언트 인증 로직 구현
- `js/common.js`: 클라이언트 측 토큰 저장/삭제 유틸리티 및 로그인 상태 확인 함수 추가
- 회원가입 페이지(signup.html): 부서 선택 기능 API 연동 및 입력 검증 개선
- 로그인 페이지(login.html): API 연동 및 에러 처리 로직 추가
- API 요청 헤더에 JWT Bearer 토큰 자동 추가(api.js)
- 401 응답 처리 및 클라이언트 로그아웃 로직 구현
- 공통 레이아웃: 로그아웃 버튼 동작 수정 (클라이언트 토큰 제거)

--- a/src/main/resources/templates/layout/fragments.html
+++ b/src/main/resources/templates/layout/fragments.html
@@ -43,7 +43,7 @@
 
             <!-- Login/Logout -->
             <div class="d-flex gap-2">
-                <a href="#" onclick="return false;" class="btn btn-sm btn-outline-light">
+                <a href="#" onclick="localStorage.removeItem('accessToken'); window.location.href='/login'; return false;" class="btn btn-sm btn-outline-light">
                     <i class="bi bi-box-arrow-right"></i> 로그아웃
                 </a>
             </div>
