--- a/src/main/resources/templates/layout/fragments.html
+++ b/src/main/resources/templates/layout/fragments.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <body>
-
 <!-- Navbar Fragment -->
 <nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-dark sticky-top">
+    <script th:src="@{/js/common.js}"></script>
+    <script th:src="@{/js/api.js}"></script>
     <div class="container-fluid">
         <!-- Logo & Brand -->
         <a class="navbar-brand" href="/reports">
@@ -43,7 +44,7 @@
 
             <!-- Login/Logout -->
             <div class="d-flex gap-2">
-                <a href="#" onclick="localStorage.removeItem('accessToken'); window.location.href='/login'; return false;" class="btn btn-sm btn-outline-light">
+                <a href="#" onclick="Common.logout(); return false;" class="btn btn-sm btn-outline-light">
                     <i class="bi bi-box-arrow-right"></i> 로그아웃
                 </a>
             </div>
