1. 관리 > 부서 관리, 템플릿 관리 추가

--- a/src/main/resources/templates/layout/fragments.html
+++ b/src/main/resources/templates/layout/fragments.html
@@ -36,8 +36,8 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:classappend="${activePage == 'templates'} ? 'active'" href="/templates">
-                        <i class="bi bi-files"></i> 템플릿
+                    <a class="nav-link" th:classappend="${activePage == 'admin'} ? 'active'" href="/templates">
+                        <i class="bi bi-gear"></i> 관리
                     </a>
                 </li>
             </ul>
