1. template 없어도 생성 되게 수정

--- a/src/main/resources/templates/pages/team-report.html
+++ b/src/main/resources/templates/pages/team-report.html
@@ -24,17 +24,23 @@
         <div class="card mb-4">
             <div class="card-body">
                 <div class="row g-3 align-items-end">
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <label for="departmentSelect" class="form-label">부서</label>
                         <select class="form-select" id="departmentSelect">
                             <option value="">부서를 선택하세요</option>
                         </select>
                     </div>
                     <div class="col-md-3">
+                        <label for="templateSelect" class="form-label">템플릿</label>
+                        <select class="form-select" id="templateSelect">
+                            <option value="">템플릿을 선택하세요</option>
+                        </select>
+                    </div>
+                    <div class="col-md-2">
                         <label for="weekStart" class="form-label">시작일</label>
                         <input type="date" class="form-control" id="weekStart">
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-2">
                         <label for="weekEnd" class="form-label">종료일</label>
                         <input type="date" class="form-control" id="weekEnd">
                     </div>
